Integrated Gutenberg web typography starter kit

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@ layout: default
     <li>You can also find him on <a href="">Snapchat</a></li>
     <li>And on Instagr.am</li>
     <li>You can reach him at <strong>me@filippocorti.net</strong></li>
-    <li>This website is temporary, updated on . I'm planning to start working
-      on a new website in September. Until then, the old one lives here.</li>
   </ul>
+
+  <p><small>This website is temporary, updated on {{ page.date }}. I'm planning to start working
+    on a new website in September. Until then, the old one lives here.</small></p>
 
 </div>
