Add home layout, header style and custom typography

--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@ layout: default
 ---
 
 <div class="home">
-  <ul>
-    <li>Writes about Apple, technology and other boring topics on <a href="">Bicycle Mind</a></li>
-    <li>Works as a UX Designer.</li>
-    <li>Puts the articles that he found, read and liked online <a href="">here</a></li>
-    <li>Tweets, with increasingly less frequency, as <a href="">@philapple</a></li>
-    <li>You can also find him on <a href="">Snapchat</a></li>
-    <li>And on Instagr.am</li>
-    <li>You can reach him at <strong>me@filippocorti.net</strong></li>
-  </ul>
+  <p class="attention-grabber small-margin-bottom">
+    <strong>Filippo Corti</strong> scrive di Apple, internet e altri
+    argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
+    Mette le cose che ha letto e che ha trovato interessanti su un blog
+    che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
+  </p>
 
-  <p><small>This website is temporary, updated on {{ page.date }}. I'm planning to start working
-    on a new website in September. Until then, the old one lives here.</small></p>
+  <img src="assets/img/fuji.jpg" class="grayscale"/>
+
+  <section class="section-home">
+    <aside>
+      <h4 class="no-margin">links</h4>
+    </aside>
+
+    <div>
+      <p>twitta, con sempre minore frequenza, come <a href="http://twitter.com/philapple">@philapple</a></p>
+      <p>lo si può trovare anche su <a href="">snapchat</a></p>
+      <p>quando è in giro, mette foto su <a href="http://instagr.am/philapple">instagram</a></p>
+      <p>se vuoi scrivergli, l'email è <strong>me@filippocorti.net</strong></p>
+      <p>per le persone serie, <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
+    </div>
+
+  </section>
 
 </div>
