--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ layout: default
 
   <img src="assets/img/fuji.jpg" class="grayscale"/>
 
-  <section class="section-home">
-    <aside>
-      <h4 class="no-margin">links</h4>
+  <section class="section-list">
+    <aside class="section__title">
+      <h3 class="no-margin">links</h3>
     </aside>
 
-    <div>
+    <div class="section__content">
       <p>twitta, con sempre minore frequenza, come <a href="http://twitter.com/philapple">@philapple</a></p>
       <p>lo si può trovare anche su <a href="">snapchat</a></p>
       <p>quando è in giro, mette foto su <a href="http://instagr.am/philapple">instagram</a></p>
