--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="home">
+
   <p class="attention-grabber small-margin-bottom">
     <strong>Filippo Corti</strong> scrive di Apple, internet e altri
     argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
@@ -11,18 +12,31 @@ layout: default
   </p>
 
   <img src="assets/img/fuji.jpg" class="grayscale"/>
+  <hr/>
 
   <section class="section-list">
     <aside class="section__title">
-      <h3 class="no-margin">links</h3>
+      <h3 class="no-margin">altrove</h3>
     </aside>
 
     <div class="section__content">
-      <p>twitta, con sempre minore frequenza, come <a href="http://twitter.com/philapple">@philapple</a></p>
-      <p>lo si può trovare anche su <a href="">snapchat</a></p>
-      <p>quando è in giro, mette foto su <a href="http://instagr.am/philapple">instagram</a></p>
-      <p>se vuoi scrivergli, l'email è <strong>me@filippocorti.net</strong></p>
-      <p>per le persone serie, <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
+      <p>lo si trova su twitter come <a href="http://twitter.com/philapple">@philapple</a></p>
+      <p>usa <a href="http://snapchat.com/add/filippocorti">snapchat</a>, ma raramente lo si vede</p>
+      <p>quando è in giro, mette foto con filtri su <a href="http://instagr.am/philapple">instagram</a></p>
+      <p>su <a href="http://goodreads.com/user/show/4464224-filippo-corti">goodreads</a> c'è quello che sta leggendo</p>
+      <p>su <a href="http://lastfm.it/user/philapple">last.fm</a> la musica che sta ascoltando</p>
+    </div>
+
+  </section>
+
+  <section class="section-list">
+    <aside class="section__title">
+      <h3 class="no-margin">contatti</h3>
+    </aside>
+
+    <div class="section__content">
+      <p>l'email è <strong>me@filippocorti.net</strong>; è lento a rispondere</p>
+      <p>per le persone serie, ha (ma non usa) <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
     </div>
 
   </section>
