Improve library layout

--- a/library.html
+++ b/library.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2 class="no-margin-top">My Library</h2>
+<h2 class="no-margin-top">My bookshelf</h2>
 <p>
   A collection of some of my favourite books.
   I just started collecting them in this page, so it will be growing in the coming months.
