--- a/library.html
+++ b/library.html
@@ -4,10 +4,9 @@ layout: default
 
 <h2 class="no-margin-top">My bookshelf</h2>
 <p>
-  A collection of some of my favourite books.
-  I just started collecting them in this page, so it will be growing in the coming months.
-  For what I am reading in this moment, check my
-  <a href="http://goodreads.com/user/show/4464224-filippo-corti">goodreads profile</a>.
+  A collection of some of my favourite books (I just started it; it'll be growing in the coming months).
+  If you are interested in what I am reading at the moment,
+  check my <a href="http://goodreads.com/user/show/4464224-filippo-corti">goodreads profile</a>.
 </p>
 
 <section class="library">
