Fix permalink bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
   </p>
 
-  <img src="assets/img/fuji.jpg" class="grayscale"/>
+  <img src="assets/filippo/fuji.jpg" class="grayscale"/>
   <hr/>
 
   <section class="section-list">
