Fix responsive issues on library page

--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 ---
 layout: default
+title: home
 ---
 
-<div class="home">
 
-  <p class="attention-grabber small-margin-bottom">
-    <strong>Filippo Corti</strong> scrive di Apple, internet e altri
-    argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
-    Mette le cose che ha letto e che ha trovato interessanti su un blog
-    che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
-  </p>
+<p class="attention-grabber small-margin-bottom">
+  <strong>Filippo Corti</strong> scrive di Apple, internet e altri
+  argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
+  Mette le cose che ha letto e che ha trovato interessanti su un blog
+  che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
+</p>
 
-  <img src="assets/filippo/fuji.jpg" class="grayscale"/>
-  <hr/>
+<img src="assets/filippo/fuji.jpg" class="grayscale"/>
+<hr/>
 
-  <section class="section-list">
-    <aside class="section__title">
-      <h3 class="no-margin">altrove</h3>
-    </aside>
+<section class="section-list">
 
-    <div class="section__content">
-      <p>lo si trova su twitter come <a href="http://twitter.com/philapple">@philapple</a></p>
-      <p>usa <a href="http://snapchat.com/add/filippocorti">snapchat</a>, ma raramente lo si vede</p>
-      <p>quando è in giro, mette foto con filtri su <a href="http://instagr.am/philapple">instagram</a></p>
-      <p>su <a href="http://goodreads.com/user/show/4464224-filippo-corti">goodreads</a> c'è quello che sta leggendo</p>
-      <p>su <a href="http://lastfm.it/user/philapple">last.fm</a> la musica che sta ascoltando</p>
-    </div>
+  <aside class="section__title">
+    <h3 class="no-margin">altrove</h3>
+  </aside>
 
-  </section>
+  <div class="section__content">
+    <p>lo si trova su twitter come <a href="http://twitter.com/philapple">@philapple</a></p>
+    <p>usa <a href="http://snapchat.com/add/filippocorti">snapchat</a>, ma raramente lo si vede</p>
+    <p>quando è in giro, mette foto con filtri su <a href="http://instagr.am/philapple">instagram</a></p>
+    <p>su <a href="http://goodreads.com/user/show/4464224-filippo-corti">goodreads</a> c'è quello che sta leggendo</p>
+    <p>su <a href="http://lastfm.it/user/philapple">last.fm</a> la musica che sta ascoltando</p>
+  </div>
 
-  <section class="section-list">
-    <aside class="section__title">
-      <h3 class="no-margin">contatti</h3>
-    </aside>
+</section>
 
-    <div class="section__content">
-      <p>l'email è <strong>me@filippocorti.net</strong>; è lento a rispondere</p>
-      <p>per le persone serie, ha (ma non usa) <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
-    </div>
+<section class="section-list">
 
-  </section>
+  <aside class="section__title">
+    <h3 class="no-margin">contatti</h3>
+  </aside>
 
-</div>
+  <div class="section__content">
+    <p>l'email è <strong>me@filippocorti.net</strong>; è lento a rispondere</p>
+    <p>per le persone serie, ha (ma non usa) <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
+  </div>
+
+</section>
