Better CSS, add mixin for media queries

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: home
+id: home
 ---
 
 
@@ -11,7 +11,9 @@ title: home
   che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
 </p>
 
-<img src="assets/filippo/fuji.jpg" class="grayscale"/>
+<figure>
+  <img src="assets/filippo/fuji.jpg" class="grayscale" alt="Mt Fuji"/>
+</figure>
 <hr/>
 
 <section class="section-list">
