--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ id: home
 <section class="section-list">
 
   <aside class="section__title">
-    <h3 class="no-margin">altrove</h3>
+    <h3 class="no-margin text-semibold">altrove</h3>
   </aside>
 
   <div class="section__content">
@@ -35,7 +35,7 @@ id: home
 <section class="section-list">
 
   <aside class="section__title">
-    <h3 class="no-margin">contatti</h3>
+    <h3 class="no-margin text-semibold">contatti</h3>
   </aside>
 
   <div class="section__content">
