Minor CSS updates

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ id: home
   </aside>
 
   <div class="section__content">
-    <p>l'email è <strong>me@filippocorti.net</strong>; è lento a rispondere</p>
+    <p>l'email è <strong class="force-select-all">me@filippocorti.net</strong>; è lento a rispondere</p>
     <p>per le persone serie, ha (ma non usa) <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
   </div>
 
