Add typed.js to home, basic 404 page and new animations

--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@ layout: default
 id: home
 ---
 
+<div class="home-intro">
 
-<p class="attention-grabber small-margin-bottom">
-  <strong>Filippo Corti</strong> scrive di Apple, internet e altri
-  argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
-  Mette le cose che ha letto e che ha trovato interessanti su un blog
-  che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
-</p>
+  <h2 class="no-margin-top typed-home">
+    <span class="typed"></span>
+  </h2>
+
+  <p class="attention-grabber">
+    Scrive di Apple, internet e altri
+    argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
+    Mette le cose che ha letto e che ha trovato interessanti su un blog
+    che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
+  </p>
+
+</div>
 
 <figure>
-  <img src="assets/filippo/fuji.jpg" class="grayscale" alt="Mt Fuji"/>
+  <img src="assets/filippo/fuji.jpg" class="grayscale fadeIn animated" alt="Mt Fuji"/>
 </figure>
 <hr/>
 
