--- a/index.html
+++ b/index.html
@@ -51,3 +51,15 @@ id: home
   </div>
 
 </section>
+
+<script type="text/javascript">
+    var feed = new Instafeed({
+        get: 'user',
+        userId: '6404',
+        limit: 8,
+        accessToken: '6404.e79b104.bccb0e6050f04fb7b8441798b31421cf'
+    });
+    feed.run();
+</script>
+
+<div id="instafeed"></div>
