--- a/work/index.html
+++ b/work/index.html
@@ -4,25 +4,71 @@ title: Filippo Corti | CV
 id: cv
 ---
 
-<section class="section-list">
+<div class="flexbox">
 
-  <aside class="section__title">
-    <h3 class="no-margin text-semibold">work</h3>
-  </aside>
+  <section class="contacts">
+    <h3 class="no-margin text-uppercase"><span class="text-light">Filippo</span> Corti</h2>
+    <h4 class="no-margin text-light">UX Designer</h4>
+    <p class="no-margin">me@filippocorti.net</p>
+    <p class="no-margin-top">London, UK</p>
 
-  <div class="section__content">
+    <button class="primary-btn" onclick="window.location.href='mailto:me@filippocorti.net'">Contact me</button>
+  </section>
+
+  <ul class="links">
+    <li><a href="">Grab .pdf version of this CV</a></li>
+    <li><a href="">Add me on Linkedin</a></li>
+    <li><a href="">Visit my GitHub profile</a></li>
+    <li><a href="http://twitter.com/philapple">Follow me on Twitter</a></li>
+  </ul>
+
+</div>
+
+<section class="cv">
+
+    <h2 class="no-margin-top">Work experience</h2>
 
     {% for work in site.data.cv["work"] %}
+    <div class="job-position">
+      <small class="date">{{ work.startDate }} {% if work.endDate != "" %}— {{ work.endDate }}{% endif %}</small>
+      <h3 class="no-margin text-light">{{ work.company }}</h3> <h4 class="no-margin">{{ work.position }}</h4>
+      <p> {{ work.summary }} </p>
+    </div>
+    {% endfor %}
 
-    <p>
-      {{ work.year }}: <b>{{ work.position }}</b> at {{ work.company }} <br/>
-      {{ work.location }}
-    </p>
+    <h2>Skills</h2>
+
+    {% for skills in site.data.cv["skills"] %}
+
+    <span class="tag">{{ skills.name }}</span>
+
+      {% for key in skills.keywords %}
+
+        <span class="tag">{{ key }}</span>
+
+      {% endfor %}
+
+    {% endfor %}
+
+    <h2>Languages</h2>
+
+    {% for language in site.data.cv["languages"] %}
+
+    <span class="tag">{{ language.language }}: {{ language.fluency }}</span>
+
 
     {% endfor %}
 
 
+    <h2>Education</h2>
 
-  </div>
+    {% for education in site.data.cv["education"] %}
+    <small class="date">{{ education.startDate }} — {{ education.endDate }}</small>
+    <h3 class="no-margin text-light">{{ education.institution }}</h4>
+    <h4 class="no-margin">{{ education.studyType }} in {{ education.area }}</h5>
+    <p> {{ work.summary }} </p>
+
+    {% endfor %}
+
 
 </section>
