Improve image gallery in home and small tweaks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ id: home
 
   <p class="attention-grabber">
     Scrive di Apple, internet e altri
-    argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
+    argomenti noiosi su <span class="icon-macintosh icon"></span> <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
     Mette le cose che ha letto e che ha trovato interessanti su un blog
     che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
   </p>
@@ -52,11 +52,12 @@ id: home
 
 </section>
 
+
 <script type="text/javascript">
     var feed = new Instafeed({
         get: 'user',
         userId: '6404',
-        limit: 8,
+        limit: 12,
         accessToken: '6404.e79b104.bccb0e6050f04fb7b8441798b31421cf'
     });
     feed.run();
