--- a/work/index.html
+++ b/work/index.html
@@ -16,9 +16,8 @@ id: cv
   </section>
 
   <ul class="links">
-    <li><a href="">Grab .pdf version of this CV</a></li>
-    <li><a href="">Add me on Linkedin</a></li>
-    <li><a href="">Visit my GitHub profile</a></li>
+    <li><a href="http://uk.linkedin.com/in/philapple/">Add me on Linkedin</a></li>
+    <li><a href="https://github.com/philapple">Visit my GitHub profile</a></li>
     <li><a href="http://twitter.com/philapple">Follow me on Twitter</a></li>
   </ul>
 
