--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 id: home
 ---
 
-<div class="home-intro">
+<div class="home-intro full-screen no-margin-bottom">
 
   <h2 class="no-margin-top typed-home">
     <span class="typed"></span>
@@ -11,22 +11,33 @@ id: home
 
   <p class="attention-grabber">
     Scrive di Apple, internet e altri
-    argomenti noiosi su <span class="icon-macintosh icon"></span> <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
+    argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
     Mette le cose che ha letto e che ha trovato interessanti su un blog
     che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
   </p>
 
 </div>
 
-<hr/>
+
+<div class="featured-links full-screen no-margin-top">
+  {% for link in site.data.links %}
+
+    <a href="{{link.url}}">
+      {% include {{link.icon}} %}
+      <strong class="featured-links__title">{{ link.sectiontitle }}</strong>
+    </a>
+
+  {% endfor %}
+</div>
+
 
 <section class="section-list">
 
-  <aside class="section__title">
+  <aside class="section-list__title">
     <h3 class="no-margin text-semibold">altrove</h3>
   </aside>
 
-  <div class="section__content">
+  <div class="section-list__content">
     <p>lo si trova su twitter come <a href="http://twitter.com/philapple">@philapple</a></p>
     <p>usa <a href="http://snapchat.com/add/filippocorti">snapchat</a>, ma raramente lo si vede</p>
     <p>quando è in giro, mette foto con filtri su <a href="http://instagr.am/philapple">instagram</a></p>
@@ -38,11 +49,11 @@ id: home
 
 <section class="section-list">
 
-  <aside class="section__title">
+  <aside class="section-list__title">
     <h3 class="no-margin text-semibold">contatti</h3>
   </aside>
 
-  <div class="section__content">
+  <div class="section-list__content">
     <p>l'email è <strong class="force-select-all">me@filippocorti.net</strong>; è lento a rispondere</p>
     <p>per le persone serie, ha (ma non usa) <a href="https://www.linkedin.com/in/philapple">linkedin</a></p>
   </div>
@@ -60,4 +71,4 @@ id: home
     feed.run();
 </script>
 
-<div id="instafeed"></div>
+<div id="instafeed" class="larger"></div>
