--- a/work/index.html
+++ b/work/index.html
@@ -12,7 +12,7 @@ id: cv
     <p class="no-margin">me@filippocorti.net</p>
     <p class="no-margin-top">London, UK</p>
 
-    <button class="primary-btn" onclick="window.location.href='mailto:me@filippocorti.net'">Contact me</button>
+    <button class="primary-btn--large" onclick="window.location.href='/hi'">Contact me</button>
   </section>
 
   <ul class="links">
