--- a/404/index.html
+++ b/404/index.html
@@ -3,6 +3,9 @@ layout: empty
 id: 404
 ---
 <a href="{{ site.url }}">
-  <img src="{{site.url}}/assets/filippo/avatar_bg_white_small.png" class="avatar shake animated">
+  <img src="{{site.url}}/assets/filippo/avatar_green.png" class="avatar shake animated">
 </a>
-<h1 class="no-margin-top error-code">404 / Page not found</h1>
+<h1 class="no-margin-top error-message larger"><span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span></span></h1>
+<h1 class="return-link no-margin-top"><a href="../">← Go back home</a></h1>
+
+<script src="{{site.baseurl}}/js/scripts.js" defer></script>
