Improve layout on small screens

--- a/work/index.html
+++ b/work/index.html
@@ -15,7 +15,7 @@ id: cv
     <button class="primary-btn--large" onclick="window.location.href='/hi'">Contact me</button>
   </section>
 
-  <ul class="links">
+  <ul class="links hidden-sm">
     <li><a href="http://uk.linkedin.com/in/philapple/">Add me on Linkedin</a></li>
     <li><a href="https://github.com/philapple">Visit my GitHub profile</a></li>
     <li><a href="http://twitter.com/philapple">Follow me on Twitter</a></li>
