--- a/colophon/index.html
+++ b/colophon/index.html
@@ -59,7 +59,7 @@ id: colophon
 
 <p>The icons in the homepage are made, in order, by:
   <a href="https://thenounproject.com/vasabi/">Lisa Krymova</a>,
-  <a href="https://thenounproject.com/steppot/">Stefan Wetterstrand</a>,
+  <a href="https://thenounproject.com/term/keyboard/397382/">Dimiter Petrov</a>,
   <a href="https://thenounproject.com/term/pigeon/54027/">Amelia Nowak</a> and
   <a href="https://thenounproject.com/term/book/573340/">James Stone</a>.
 </p>
