--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ id: home
     Scrive di Apple, internet e altri
     argomenti noiosi su <a href="http://bicyclemind.it"><strong>Bicycle Mind</strong></a>.
     Mette le cose che ha letto e che ha trovato interessanti su un blog
-    che ha chiamato <a href="http://dostoevskij.net"><strong>Orpolina!</strong></a>
+    che ha chiamato <a href="http://blog.filippo.me"><strong>Orpolina!</strong></a>
   </p>
 
 </div>
