--- a/colophon/index.html
+++ b/colophon/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Filippo Corti | Colophon
 id: colophon
+excerpt: Behind the scenes of this website
 ---
 
 <h2 class="no-margin-top">Colophon</h2>
