--- a/hi/index.html
+++ b/hi/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Filippo Corti | Hello
 id: hi
+excerpt: If you need to get in touch with me, here's how you can do it
 ---
 
 <h2 class="no-margin-top">Say Hi 👋</h2>
