--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ id: home
     var feed = new Instafeed({
         get: 'user',
         userId: '6404',
+        resolution: 'standard_resolution',
         limit: 12,
         accessToken: '6404.e79b104.bccb0e6050f04fb7b8441798b31421cf'
     });
