--- a/about/index.html
+++ b/about/index.html
@@ -7,12 +7,12 @@ id: about
 <h2 class="no-margin-top">About me</h2>
 
 <figure class="larger">
-  <img src="/assets/filippo/fuji.jpg" class="grayscale fadeIn animated" alt="Mt Fuji"/>
+  <img src="/assets/filippo/fuji.jpg" class="flickering" alt="Mt Fuji"/>
 </figure>
 
 <p class="attention-grabber">
   Filippo Corti is a 25 year old human born in the north of Italy (Lecco).
-  He has studied in Pisa and lived there for three years, after which he moved to London. 
+  He has studied in Pisa and lived there for three years, after which he moved to London.
 </p>
 
 
