Add clicks page and latest articles to home

--- a/colophon/index.html
+++ b/colophon/index.html
@@ -5,7 +5,7 @@ id: colophon
 excerpt: Behind the scenes of this website
 ---
 
-<h2 class="no-margin-top">Colophon</h2>
+<h2 class="no-margin-top baffle">Colophon</h2>
 
 <figure class="larger">
   <img src="/assets/img/site_2004.png" class="grayscale fadeIn animated" alt="Mt Fuji"/>
@@ -60,9 +60,9 @@ excerpt: Behind the scenes of this website
 
 <p>The icons in the homepage are made, in order, by:
   <a href="https://thenounproject.com/vasabi/">Lisa Krymova</a>,
-  <a href="https://thenounproject.com/term/keyboard/397382/">Dimiter Petrov</a>,
+  <a href="https://thenounproject.com/leemette/">Lee Mette</a>,
   <a href="https://thenounproject.com/term/pigeon/54027/">Amelia Nowak</a> and
-  <a href="https://thenounproject.com/term/book/573340/">James Stone</a>.
+  <a href="https://thenounproject.com/bluetip/">Blue Tip Design</a>.
 </p>
 
 <p>
