--- a/hi/index.html
+++ b/hi/index.html
@@ -5,12 +5,14 @@ id: hi
 excerpt: If you need to get in touch with me, here's how you can do it
 ---
 
-<h2 class="no-margin-top">Say Hi 👋</h2>
+<h2 class="no-margin-top baffle">Say Hi 👋</h2>
 <p class="attention-grabber">
   You can contact me using the form below, or simply by sending an email to
-  <strong class="force-select-all">me@filippocorti.net</strong>.</p>
-<p class="attention-grabber">
-  Just FYI, I am very slow at replying. I will pretend I was busy. Please do pretend to believe in that.
+  <strong class="force-select-all">me@filippocorti.net</strong>.
+  You can also tweet me at <a href="http://twitter.com/philapple">@philapple</a>.</p>
+<p>
+  Just FYI, I am very slow at replying. I will pretend I was busy.
+  Please do pretend to believe in that.
 </p>
 
 <form action="https://formspree.io/me@filippocorti.net" method="POST" id="contact-form" class="larger">
