--- a/404/index.html
+++ b/404/index.html
@@ -5,7 +5,7 @@ id: 404
 <a href="{{ site.url }}">
   <img src="{{site.url}}/assets/filippo/avatar_green.png" class="avatar shake animated">
 </a>
-<h1 class="no-margin-top error-message larger"><span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span></span></h1>
-<h1 class="return-link no-margin-top"><a href="../">← Go back home</a></h1>
+<h2 class="no-margin-top error-message larger"><span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span></span></h2>
+<h1 class="return-link no-margin-top"><a href="../">← Visit home</a></h1>
 
 <script src="{{site.baseurl}}/js/scripts.js" defer></script>
