--- a/work/index.html
+++ b/work/index.html
@@ -1,74 +1,43 @@
 ---
 layout: default
-title: Filippo Corti | CV
-id: cv
+title: Filippo Corti | Work
+id: work
 excerpt: What I do, and what I've done
 ---
 
-<div class="flexbox">
+<h2 class="no-margin-top baffle">Work & Projects</h2>
 
-  <section class="contacts">
-    <h3 class="no-margin text-uppercase"><span class="text-light">Filippo</span> Corti</h2>
-    <h4 class="no-margin text-light">UX Designer</h4>
-    <p class="no-margin">me@filippocorti.net</p>
-    <p class="no-margin-top">London, UK</p>
+<p class="attention-grabber">
+  Ciao!
+  I'm a UX designer and web developer</span>.
+  I move pixels around until they look nice. If you're looking for someone to
+  design and build digital products, <a href="cv">you should get in contact</a>.
+</p>
 
-    <button class="primary-btn--large" onclick="window.location.href='/hi'">Contact me</button>
-  </section>
-
-  <ul class="links hidden-sm">
-    <li><a href="http://uk.linkedin.com/in/philapple/">Add me on Linkedin</a></li>
-    <li><a href="https://github.com/philapple">Visit my GitHub profile</a></li>
-    <li><a href="http://twitter.com/philapple">Follow me on Twitter</a></li>
-  </ul>
-
-</div>
-
-<section class="cv">
-
-    <h2 class="no-margin-top">Work experience</h2>
-
-    {% for work in site.data.cv["work"] %}
-    <div class="job-position">
-      <small class="date">{{ work.startDate }} {% if work.endDate != "" %}— {{ work.endDate }}{% endif %}</small>
-      <h3 class="no-margin text-light">{{ work.company }}</h3> <h4 class="no-margin">{{ work.position }}</h4>
-      <p> {{ work.summary }} </p>
-    </div>
-    {% endfor %}
-
-    <h2>Skills</h2>
-
-    {% for skills in site.data.cv["skills"] %}
-
-    <span class="tag">{{ skills.name }}</span>
-
-      {% for key in skills.keywords %}
-
-        <span class="tag">{{ key }}</span>
-
-      {% endfor %}
-
-    {% endfor %}
-
-    <h2>Languages</h2>
-
-    {% for language in site.data.cv["languages"] %}
-
-    <span class="tag">{{ language.language }}: {{ language.fluency }}</span>
-
-
-    {% endfor %}
-
-
-    <h2>Education</h2>
-
-    {% for education in site.data.cv["education"] %}
-    <small class="date">{{ education.startDate }} — {{ education.endDate }}</small>
-    <h3 class="no-margin text-light">{{ education.institution }}</h4>
-    <h4 class="no-margin">{{ education.studyType }} in {{ education.area }}</h5>
-    <p> {{ work.summary }} </p>
-
-    {% endfor %}
-
-
+<section>
+  <a href="cv" class="sectionLink">
+    {% include icons/document.svg %} <strong>View my CV</strong> — experience, skills and education
+  </a>
 </section>
+
+<p>
+  I have experience in designing interfaces for desktop and mobile — from mockups and wireframes
+  to their final stage. I've conducted usability testing and user research,
+  delivered front-end style guides and created UI prototypes.
+  I work mostly with paper and Sketch.
+</p>
+
+<p>
+  I also have experience in developing websites — I've worked with WordPress,
+  Jekyll, and other frameworks. I write CSS and HTML daily, JS occasionaly.
+</p>
+
+<h3 class="no-margin-top">What can I do for you?</h2>
+
+<ul>
+  <li>I can help you find and solve your UX issues</li>
+  <li>I can help you create a front-end style guide that follows Atomic
+    Design principles and will improve design consistency of your app</li>
+  <li>I can design and build the website for your business, from the initial mockups to the final product</li>
+  <li>I can help you write maintainable CSS</li>
+</ul>
