Content updates and minor tweaks to header

--- a/hi/index.html
+++ b/hi/index.html
@@ -31,3 +31,16 @@ excerpt: If you need to get in touch with me, here's how you can do it
   <input type="submit" value="Establish contact 🚀" class="submit-btn no-border no-margin">
 
 </form>
+
+<section class="social-links no-margin-top">
+  <h3><span>you can also find me on</span></h3>
+
+  <p class="attention-grabber no-margin-bottom">
+    <a href="http://instagram.com/philapple">Instagr.am</a>, <a href="http://github.com/philapple">GitHub</a>,
+    <a href="http://twitter.com/philapple">Twitter</a>, <a href="http://blog.filippo.me">Tumblr</a>,
+    <a href="http://facebook.com/philapple">Facebook</a>,
+    <a href="http://www.goodreads.com/user/show/4464224-filippo-corti">Goodreads</a> 
+    and <a href="http://uk.linkedin.com/in/philapple/">LinkedIn</a>
+  </p>
+
+</section>
