--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@ id: home
 
   <p class="attention-grabber no-margin-bottom">
     Blogger, UX designer, developer from Italy.
-    Been writing a blog about technology since 2005, it's called <a href="">Bicycle Mind</a>.
-    Currently works from London as the UX Designer of a small startup.
+    Been writing a blog about technology since 2005, it's called
+    <a href="https://bicyclemind.it">Bicycle Mind</a>. I also have a
+    <a href="http://blog.filippo.me">personal blog</a>.
+    Currently working from London as the UX Designer of a small startup.
   </p>
 
 </div>
@@ -52,7 +54,7 @@ id: home
         get: 'user',
         userId: '6404',
         resolution: 'standard_resolution',
-        limit: 12,
+        limit: 8,
         accessToken: '6404.e79b104.bccb0e6050f04fb7b8441798b31421cf'
     });
     feed.run();
