--- a/work/index.html
+++ b/work/index.html
@@ -11,7 +11,7 @@ excerpt: What I do, and what I've done
   Ciao!
   I'm a UX designer and web developer</span>.
   I move pixels around until they look nice. If you're looking for someone to
-  design and build digital products, <a href="cv">you should get in contact</a>.
+  design and build digital products — websites, apps or weird futuristic stuff —, <a href="cv">you should get in contact</a>.
 </p>
 
 <section>
@@ -29,7 +29,8 @@ excerpt: What I do, and what I've done
 
 <p>
   I also have experience in developing websites — I've worked with WordPress,
-  Jekyll, and other frameworks. I write CSS and HTML daily, JS occasionaly.
+  Jekyll, and other frameworks. My skills include CSS, HTML and JS.
+  I'm interested in minimalism, simple UX/UI solutions, typography and data visualisations.
 </p>
 
 <h3 class="no-margin-top">What can I do for you?</h2>
