Add reading page, improve CSS and content updates

--- a/404/index.html
+++ b/404/index.html
@@ -2,10 +2,7 @@
 layout: empty
 id: 404
 ---
-<a href="{{ site.url }}">
-  <img src="{{site.url}}/assets/filippo/avatar_green.png" class="avatar shake animated">
-</a>
-<h2 class="no-margin-top error-message larger"><span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span></span></h2>
-<h1 class="return-link no-margin-top"><a href="../">← Visit home</a></h1>
+<h2 class="no-margin-top error-message"><span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span></span></h2>
+<h1 class="return-link no-margin-top"><a href="https://www.filippocorti.net/"><i class="icon icon-angle-left"></i> Visit home</a></h1>
 
 <script src="{{site.baseurl}}/js/scripts.js" defer></script>
