Add show more on home + move photos to separate page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@ id: home
     <span class="typed"></span>
   </h2>
 
-  <p class="attention-grabber no-margin-bottom">
-    Blogger, UX designer, developer from Italy.
-    Been writing a blog about technology since 2005, it's called
-    <a href="https://bicyclemind.it">Bicycle Mind</a>. I also have a
-    <a href="http://blog.filippo.me">personal blog</a>.
-    Currently working from London as the UX Designer of a small startup.
-  </p>
+  <div class="no-margin-bottom">
+    <p class="attention-grabber no-margin-bottom">
+      UX designer and web developer from Italy.
+      I've been writing a blog about technology since 2005 —
+      <a href="https://bicyclemind.it">Bicycle Mind</a>.
+      I'm currently working from London, as the UX Designer of a small startup.
+    </p>
+
+    <p class="attention-grabber margin-top no-margin-bottom">
+     I also have a <a href="http://blog.filippo.me">personal blog</a>.
+    </p>
+
+    <span class="btn-text btn-expand no-margin-bottom"><i class="icon icon-angle-down no-margin-bottom"></i> Read more</span>
+  </div>
 
 </div>
 
@@ -48,16 +55,3 @@ id: home
   </div>
 
 </section>
-
-<script type="text/javascript">
-    var feed = new Instafeed({
-        get: 'user',
-        userId: '6404',
-        resolution: 'standard_resolution',
-        limit: 8,
-        accessToken: '6404.e79b104.bccb0e6050f04fb7b8441798b31421cf'
-    });
-    feed.run();
-</script>
-
-<div id="instafeed" class="larger"></div>
