--- a/likes/books/reading/index.html
+++ b/likes/books/reading/index.html
@@ -4,23 +4,27 @@ title: Filippo Corti | Reading
 id: reading
 excerpt: Books I've been reading
 ---
-<div>
-  <a href="../" class="btn-back">
-    <i class="icon icon-angle-left"></i>
-     favourites
-   </a>
-</div>
 
-<h2 class="no-margin-top">Stuff I've Been Reading</h2>
+<section class="introduction">
+  <div>
+    <a href="../" class="btn-back">
+      <i class="icon icon-angle-left"></i>
+       favourites
+     </a>
+  </div>
+
+  <h2 class="no-margin-top">Stuff I've Been Reading</h2>
 
 
-<p class="attention-grabber">Books I've been reading (only the ones I liked)
-— ordered chronologically.<p>
+  <p class="attention-grabber">Books I've been reading (only the ones I liked)
+  — ordered chronologically.<p>
 
-<p>For what I intend to read, have a look at my <a href="http://amzn.eu/25hflIV">Amazon Wishlist</a>.
-  You can also <a href="http://www.goodreads.com/user/show/4464224-filippo-corti">
-  follow me on Goodreads</a>.
-</p>
+  <p>For what I intend to read, have a look at my <a href="http://amzn.eu/25hflIV">Amazon Wishlist</a>.
+    You can also <a href="http://www.goodreads.com/user/show/4464224-filippo-corti">
+    follow me on Goodreads</a>.
+  </p>
+
+</section>
 
 <section class="reading">
 
@@ -43,7 +47,7 @@ excerpt: Books I've been reading
           <p>{{ quote }}</p>
       {% endfor %}
 
-      <a class="btn show">
+      <a class="btn-expand btn">
         <i class="icon icon-angle-down"></i>
         <span data-text-swap="less" data-text-original="more">more</span> excerpts
       </a>
