--- a/work/cv/index.html
+++ b/work/cv/index.html
@@ -19,7 +19,7 @@ excerpt: What I do, and what I've done
     <p class="no-margin">me@filippocorti.net</p>
     <p class="no-margin-top">London, UK</p>
 
-    <button class="primary-btn--large" onclick="window.location.href='/hi'">Contact me</button>
+    <button class="primary-btn primary-btn--large" onclick="window.location.href='/hi'">Contact me</button>
   </section>
 
   <ul class="links hidden-sm">
