--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ id: home
       I'm currently working from London, as the UX Designer of a small startup.
     </p>
 
-    <p class="attention-grabber margin-top no-margin-bottom">
-     I also have a <a href="http://blog.filippo.me">personal blog</a>.
+    <!--
+    <p class="margin-top no-margin-bottom">
     </p>
 
     <span class="btn-text btn-expand no-margin-bottom"><i class="icon icon-angle-down no-margin-bottom"></i> Read more</span>
+  !-->
   </div>
-
 </div>
 
 
