Add indieweb rel attribute to profile links

--- a/hi/index.html
+++ b/hi/index.html
@@ -9,7 +9,7 @@ excerpt: If you need to get in touch with me, here's how you can do it
 <p class="attention-grabber">
   You can contact me using the form below, or simply by sending an email to
   <strong class="force-select-all">me@filippocorti.net</strong>.
-  You can also tweet me at <a href="http://twitter.com/philapple">@philapple</a>.</p>
+  You can also tweet me at <a rel="me" href="https://twitter.com/philapple">@philapple</a>.</p>
 <p>
   Just FYI, I am very slow at replying. I will pretend I was busy.
   Please do pretend to believe in that.
@@ -36,11 +36,11 @@ excerpt: If you need to get in touch with me, here's how you can do it
   <h3><span>you can also find me on</span></h3>
 
   <p class="attention-grabber no-margin-bottom">
-    <a href="http://instagram.com/philapple">Instagr.am</a>, <a href="http://github.com/philapple">GitHub</a>,
-    <a href="http://twitter.com/philapple">Twitter</a>, <a href="http://blog.filippo.me">Tumblr</a>,
-    <a href="http://facebook.com/philapple">Facebook</a>,
-    <a href="http://www.goodreads.com/user/show/4464224-filippo-corti">Goodreads</a>
-    and <a href="http://uk.linkedin.com/in/philapple/">LinkedIn</a>
+    <a rel="me" href="https://instagram.com/philapple">Instagr.am</a>, <a rel="me" href="https://github.com/philapple">GitHub</a>,
+    <a rel="me" href="https://twitter.com/philapple">Twitter</a>, <a rel="me" href="https://blog.filippo.me">Tumblr</a>,
+    <a rel="me" href="https://facebook.com/philapple">Facebook</a>,
+    <a rel="me" href="https://www.goodreads.com/user/show/4464224-filippo-corti">Goodreads</a>
+    and <a rel="me" href="https://uk.linkedin.com/in/philapple/">LinkedIn</a>
   </p>
 
 </section>
