--- a/likes/books/reading/index.html
+++ b/likes/books/reading/index.html
@@ -6,25 +6,20 @@ excerpt: Books I've been reading
 ---
 
 <section class="introduction">
-  <div>
-    <a href="../" class="btn-back">
-      <i class="icon icon-angle-left"></i>
-       favourites
-     </a>
-  </div>
 
   <h2 class="no-margin-top">Stuff I've Been Reading</h2>
 
 
-  <p class="attention-grabber">Books I've been reading (only the ones I liked)
-  — ordered chronologically.<p>
-
-  <p>For what I intend to read, have a look at my <a href="http://amzn.eu/25hflIV">Amazon Wishlist</a>.
-    You can also <a href="http://www.goodreads.com/user/show/4464224-filippo-corti">
-    follow me on Goodreads</a>.
+  <p class="attention-grabber">For what I intend to read, have a look at my <i class="icon icon-amazon"></i> <a href="http://amzn.eu/25hflIV">Amazon Wishlist</a>.
+    You can also follow me on <i class="icon icon-goodreads"></i> <a href="http://www.goodreads.com/user/show/4464224-filippo-corti">Goodreads</a>.
+    My <i class="icon icon-star"></i> <a href="../">favourites are here</a>.
   </p>
 
+
+
 </section>
+
+{% include newsletter.html %}
 
 <section class="reading">
 
