Add movies to library

--- a/likes/things/index.html
+++ b/likes/things/index.html
@@ -9,6 +9,7 @@ excerpt: Some of my favourite things & objects
 <nav class="subnav">
   <ul>
     <li><a href="../books/">Books</a></li>
+    <li><a href="../movies/">Movies</a></li>
     <li><a href="../things/" class="active">Things</a></li>
   </ul>
 </nav>
