Fix instagram authorisation bug

--- a/photos/index.html
+++ b/photos/index.html
@@ -5,9 +5,12 @@ id: photos
 excerpt: Instagr.am shots
 ---
 
-<h2 class="no-margin-top baffle">Photos 🤳</h2>
-<p class="attention-grabber">
-  My <a href="http://instagram.com/philapple">Instagr.am</a> feed.</p>
+<section class="introduction">
+  <h2 class="no-margin-top baffle">Photos 🤳</h2>
+  <p class="attention-grabber">
+    My <a href="http://instagram.com/philapple">Instagr.am</a> feed.</p>
+</section>
+
 
   <script type="text/javascript">
       var feed = new Instafeed({
@@ -15,7 +18,7 @@ excerpt: Instagr.am shots
           userId: '6404',
           resolution: 'standard_resolution',
           limit: 64,
-          accessToken: '6404.e79b104.bccb0e6050f04fb7b8441798b31421cf'
+          accessToken: '6404.1677ed0.82247b6d05a54db4a900c6f5ea049d45'
       });
       feed.run();
   </script>
