Move layout to grid and css tweaks

--- a/clicks/index.html
+++ b/clicks/index.html
@@ -4,18 +4,20 @@ title: Filippo Corti | Clicks
 id: tab-dump
 excerpt: Excursions around the web
 ---
+<section class="introduction">
 
-<h2 class="no-margin-top"><i class="icon icon-mouse"></i> Clicks</h2>
+  <h2 class="no-margin-top"><i class="icon icon-mouse"></i> Clicks</h2>
 
-<p class="attention-grabber no-margin-bottom">
-  A stream of things I've been reading, online.
-  Some end up in <a href="http://blog.filippo.me">my blog</a>.
-  There's also an <i class="icon icon-rss-square text-link-color"></i>
-  <a href="http://feeds.eppol.net/orpolina">RSS feed</a>.
-</p>
+  <p class="attention-grabber no-margin-bottom">
+    A stream of things I've been reading, online.
+    Some end up in <a href="http://blog.filippo.me">my blog</a>.
+    There's also an <i class="icon icon-rss-square text-link-color"></i>
+    <a href="http://feeds.eppol.net/orpolina">RSS feed</a>.
+  </p>
 
+</section>
 
-<hr/>
+{% include newsletter.html %}
 
 <div id="bookmarks">
   <div class="spinner">
